<?xml version="1.0"?>
<package format="2">
  <name>bag_handle_estimator</name>
  <version>1.0.0</version>
  <description>The bag_handle_estimator package</description>

  <maintainer email="kumarugby1029@gmail.com">Yuki Okuma</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>


</package>
